--- a/languages/en.json
+++ b/languages/en.json
@@ -28,7 +28,7 @@
             "li3": "✔ Basic SEO optimization",
             "li4": "✔ Integration with social media platforms or WhatsApp",
             "li5": "✔ Optional hosting and domain",
-            "p3": "💰 From USD 150",
+            "p3": "💰 From USD 100",
             "p4": "Interested in a landing page for your business?",
             "p5": "Have any questions?",
             "btn": "Reach out on WhatsApp"
@@ -38,7 +38,7 @@
             "p1": "A business website is the digital introduction to your brand or venture.",
             "p2": "I design modern, clean, and fully responsive websites crafted to reflect your professional identity, build trust, and highlight the best of what you offer.",
             "p3": "Each project includes a fully custom design (no premade templates), basic SEO optimization, functional forms, and assistance with domain and hosting setup to ensure your website goes live 100% ready, visible, and built to grow.",
-            "p4": "From USD 250",
+            "p4": "💰 From USD 200",
             "p5": "Want to enhance your brand’s digital presence?",
             "p6": "Write to me and I’ll give you guidance with no obligation.",
             "btn": "Reach out on WhatsApp"
@@ -94,7 +94,8 @@
     },
     "contact":{
         "title": "Your next project starts here.",
-        "intro": "Fill out the form and I’ll get back to you shortly. The more details you can provide, the better I can help you and prepare a proposal that fits your needs. You can also contact me directly on WhatsApp if you prefer a faster response."
+        "intro1": "Fill out the form and I’ll get back to you shortly. The more details you can provide, the better I can help you and prepare a proposal that fits your needs. You can also contact me directly on ",
+        "intro2": " if you prefer a faster response."
     },
     "footer":{
         "p1": "I personally handled all the development and programming using Visual Studio Code."
