--- a/languages/en.json
+++ b/languages/en.json
@@ -93,7 +93,7 @@
         }
     },
     "contact":{
-        "title": "Your next project starts here.",
+        "title": "Your next project starts here",
         "intro1": "Fill out the form and I’ll get back to you shortly. The more details you can provide, the better I can help you and prepare a proposal that fits your needs. You can also contact me directly on ",
         "intro2": " if you prefer a faster response."
     },
